--- a/index.html
+++ b/index.html
@@ -28,59 +28,18 @@
 	<script>
 		var tasks = [
 			{
-				start: '2018-10-01',
-				end: '2018-10-08',
-				name: 'Redesign website',
+				start: '2021-05-05 09:00:00 GMT-0400',
+				end: '2021-05-05 17:00:00 GMT-0400',
+				name: 'Technician 1',
 				id: "Task 0",
-				progress: 20
+				progress: null
 			},
 			{
-				start: '2018-10-03',
-				end: '2018-10-06',
-				name: 'Write new content',
+				start: '2021-05-05 09:00:00',
+				end: '2021-05-05 17:00:00',
+				name: 'Technician 2',
 				id: "Task 1",
-				progress: 5,
-				dependencies: 'Task 0'
-			},
-			{
-				start: '2018-10-04',
-				end: '2018-10-08',
-				name: 'Apply new styles',
-				id: "Task 2",
-				progress: 10,
-				dependencies: 'Task 1'
-			},
-			{
-				start: '2018-10-08',
-				end: '2018-10-09',
-				name: 'Review',
-				id: "Task 3",
-				progress: 5,
-				dependencies: 'Task 2'
-			},
-			{
-				start: '2018-10-08',
-				end: '2018-10-10',
-				name: 'Deploy',
-				id: "Task 4",
-				progress: 0,
-				dependencies: 'Task 2'
-			},
-			{
-				start: '2018-10-11',
-				end: '2018-10-11',
-				name: 'Go Live!',
-				id: "Task 5",
-				progress: 0,
-				dependencies: 'Task 4',
-				custom_class: 'bar-milestone'
-			},
-			{
-				start: '2014-01-05',
-				end: '2019-10-12',
-				name: 'Long term task',
-				id: "Task 6",
-				progress: 0
+				progress: null
 			}
 		]
 		var gantt_chart = new Gantt(".gantt-target", tasks, {
@@ -96,8 +55,8 @@
 			on_view_change: function(mode) {
 				console.log(mode);
 			},
-			view_mode: 'Month',
-			language: 'en'
+			view_mode: 'Hour',
+			language: 'en',
 		});
 		console.log(gantt_chart);
 	</script>
